Display xhr status in product form, including error messages if server returns any Fix bug with new tenders not showing up in tenders view because new tender id wasn't being put on the object Begin renaming productSpec -> commodity, bidRequest -> tender

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -370,3 +370,7 @@ table.bids td {
     padding: 8px;
     border-radius: 10px;
 }
+
+.status-text {
+    color: red;
+}
